# lcdd

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  configure  configure.ac  lcd  lcd.h  lcdd.cpp  lcdwrite.cpp
include/: Makefile.am  Makefile.in  auxfunctions.h  defines.h.in  lcd  lcd.h
src/: Makefile.am  Makefile.in  auxfunctions.c  lcdCommon.c  lcdCommonCXX.cpp  lcdTest.cpp  lcdcommon.c  lcdd.cpp  lcdwrite.cpp
